--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "rollup-plugin-conditional": "^1.1.1",
     "rollup-plugin-filesize": "^1.0.1",
     "rollup-plugin-hash": "^1.3.0",
+    "rollup-plugin-license": "^0.5.0",
     "rollup-plugin-livereload": "^0.4.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.1.0",
