Initial commit of working build process for v2.0.0:
Add webpack dependencies
Add TypeScript dependencies
Add ESLint dependencies
Add Babel dependencies (including browserslistrc)
Configure Webpack for development and production environments
Add npm scripts to bild project

--- a/package.json
+++ b/package.json
@@ -4,10 +4,25 @@
   "main": "dist/lib.js",
   "license": "MIT",
   "scripts": {
-    "test": ""
+    "test": "",
+    "build": "webpack --config webpack.prod.js",
+    "build:dev": "webpack --config webpack.dev.js"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^2.0.2",
+    "core-js": "^3.1.3",
+    "typescript": "^3.4.5",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-merge": "^4.2.1",
+    "workerize-loader": "^1.0.4"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
