--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,21 @@
 {
-  "presets": [
-    [
-      "es2015",
-      {
-        "modules": false
-      }
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                useBuiltIns: "usage",
+                corejs: 3,
+                debug: false,
+                exclude: [
+                    "es.promise",
+                    "es.object.to-string"
+                ]
+            }
+        ],
+        "@babel/preset-typescript"
+    ],
+    "plugins": [
+        "@babel/proposal-class-properties",
+        "@babel/proposal-object-rest-spread"
     ]
-  ],
-  "plugins": [
-    "external-helpers"
-  ]
 }
