--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "",
+    "start:dev": "webpack-dev-server --progress --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js"
   },
@@ -18,9 +19,11 @@
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
     "core-js": "^3.1.3",
+    "html-webpack-plugin": "^3.2.0",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1",
     "workerize-loader": "^1.0.4"
   },
