--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "^7.4.4",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "babel-loader": "^8.0.6",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.2",
     "core-js": "^3.1.3",
     "eslint": "^5.16.0",
@@ -27,6 +32,7 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-prettier": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "mocha": "^6.1.4",
     "prettier": "^1.17.1",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
