Use TypeScript strict compiler option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,15 @@
 {
   "compilerOptions": {
+    "strict": true,
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
-    "noImplicitAny": true,
     "declarationDir": "dist/types",
     "declaration": true,
     "target": "esnext",
     "module": "commonjs",
-    "esModuleInterop": true,
     "noEmit": true
   },
   "include": [
