--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^1.17.1",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1",
