--- a/.eslintrc
+++ b/.eslintrc
@@ -10,8 +10,9 @@
         sourceType: "module"
     },
     env: {
-		es6: true,
-		browser: true
+        es6: true,
+        browser: true,
+        jest: true
 	},
     rules: {
         prettier/prettier: "error",
