--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.13",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
     "core-js": "^3.1.3",
@@ -27,6 +29,7 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-prettier": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.8.0",
     "prettier": "^1.17.1",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
