--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-prettier": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^2.3.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.1",
     "typescript": "^3.4.5",
@@ -41,5 +42,10 @@
     "webpack-merge": "^4.2.1",
     "workerize-loader": "^1.0.4"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "husky": {
+    "hooks": {
+      "pre-push": "npm test"
+    }
+  }
 }
