--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "insights.js",
-  "version": "0.0.0",
+  "version": "2.0.0",
   "main": "dist/lib.js",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/fastly/insights.js.git"
+  },
   "scripts": {
     "test": "npm run test:once && npm run lint",
     "test:once": "jest --coverage",
@@ -34,6 +38,7 @@
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "prettier": "^1.17.1",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.3.2",
