--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,7 @@
         dot-notation: 0,
         semi: [2, "always"],
         strict: [2, "global"],
-        valid-jsdoc: 1,
+        valid-jsdoc: 0,
         no-irregular-whitespace: 1,
         no-multi-spaces: 2,
         one-var: [2, "never"],
@@ -38,6 +38,7 @@
         prefer-const: 1,
         no-const-assign: 2,
         "@typescript-eslint/no-explicit-any": 0,
+        "@typescript-eslint/explicit-function-return-type": 0,
         indent: ["error", 2]
 	},
 	globals: {
