--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "jest-mock-random": "^1.0.2",
+    "nock": "^10.0.6",
     "prettier": "^1.17.1",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2",
@@ -47,7 +48,10 @@
     "webpack-merge": "^4.2.1",
     "workerize-loader": "^1.0.4"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@types/nock": "^10.0.3",
+    "whatwg-fetch": "^3.0.0"
+  },
   "husky": {
     "hooks": {
       "pre-push": "npm test"
