--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.13",
+    "@types/nock": "^10.0.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "babel-jest": "^24.8.0",
@@ -38,6 +39,7 @@
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "jest-mock-random": "^1.0.2",
+    "native-promise-only": "^0.8.1",
     "nock": "^10.0.6",
     "prettier": "^1.17.1",
     "typescript": "^3.4.5",
@@ -46,12 +48,10 @@
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1",
-    "workerize-loader": "^1.0.4"
+    "workerize-loader": "^1.0.4",
+    "unfetch": "^4.1.0"
   },
-  "dependencies": {
-    "@types/nock": "^10.0.3",
-    "whatwg-fetch": "^3.0.0"
-  },
+  "dependencies": {},
   "husky": {
     "hooks": {
       "pre-push": "npm test"
