Add utility to parse query parameters from script tag src attribute

--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
                 debug: false,
                 exclude: [
                     "es.promise",
-                    "es.object.to-string"
+                    "es.object.to-string",
+                    "web.url"
                 ]
             }
         ],
