Add DOM library types to tsconfig and fix related errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "declaration": true,
     "target": "esnext",
     "module": "commonjs",
-    "noEmit": true
+    "noEmit": true,
+    "lib": [
+      "dom"
+    ]
   },
   "include": [
     "src/**/*"
