--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/nock": "^10.0.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
+    "assets-webpack-plugin": "^3.9.10",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
