--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
-    "webpack-merge": "^4.2.1",
-    "workerize-loader": "^1.0.4"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@fastly/performance-observer-polyfill": "^1.0.2"
