--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fastly/insights.js",
-  "version": "0.0.0",
+  "version": "2.0.0-alpha.9",
   "license": "MIT",
   "repository": {
     "type": "git",
