--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-typescript": "^7.7.2",
-    "@types/jest": "^24.0.22",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
+    "@types/jest": "^24.0.23",
     "@types/nock": "^10.0.3",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
-    "core-js": "^3.4.0",
+    "core-js": "^3.4.2",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
     "eslint-loader": "^2.2.1",
@@ -45,9 +45,9 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.7.0",
     "jest": "^24.9.0",
-    "jest-mock-random": "^1.0.2",
+    "jest-mock-random": "^1.0.3",
     "nock": "^10.0.6",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "typescript": "^3.7.2",
     "unfetch": "^4.1.0",
     "webpack": "^4.41.2",
@@ -57,7 +57,7 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@fastly/performance-observer-polyfill": "git://github.com/fastly/performance-observer-polyfill.git#phamann/update-dependencies"
+    "@fastly/performance-observer-polyfill": "^1.1.0"
   },
   "husky": {
     "hooks": {
